--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Newman Postman Collection Run
 
 on:
+  schedule:
+    - cron: '0 3 * * *'
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -18,30 +21,47 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install Newman
-        run: npm install -g newman
+      - name: Install newman & HTML extra reporter
+        run: |
+          npm install -g newman
+          npm install -g newman-reporter-htmlextra
+      - name: Run Tests on Dev or Stage
+        run: |
+          newman run src/Lesson_3.postman_collection.json -e src/Lesson_3.postman_environment.json -r cli,htmlextra,junit
 
-      - name: Run Newman
-        run: newman run src/Lesson_3.postman_collection.json -e src/Lesson_3.postman_environment.json -r cli,junit --reporter-junit-export-results.xml
 
-      - name: Archive results
-        uses: actions/upload-artifact@v2
-        with:
-          name: newman-results
-          path: results.xml
+      # - name: Archive results
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: newman-results
+      #     path: results.xml
       - name: Checkout gh-pages branch
         uses: actions/checkout@v2
         with:
           ref: gh-pages
           path: gh-pages
 
-      - name: Copy Report to gh-pages
-        run: cp results.xml gh-pages/
-
-      - name: Push Report to gh-pages
-        uses: cpina/github-action-push-to-branch@v1.1
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
+      - name: Rename report
+        if: always()
+        run: |
+          ls
+          pwd
+          cd newman
+          mv *.html index.html
+      
+      - name: Host Report on GH pages
+        if: always()
+        uses: crazy-max/ghaction-github-pages@v3
         with:
-          source-directory: 'gh-pages'
-          destination-branch: 'gh-pages'
+          target_branch: gh-pages
+          build_dir: newman
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Deploy report to Github Pages newman directory
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: newman
