--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,29 @@ jobs:
             npm install -g newman-reporter-htmlextra
       - name: Run tests
         run: newman run src/Lesson_3.postman_collection.json -e src/Lesson_3.postman_environment.json -r cli,htmlextra,junit
-        
+      # Deploy to GH Pages
+      - name: Checkout to gh-pages branch
+        if: always()
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Copy report to the gh-pages branch
+        if: always()
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: gh-pages
+          build_dir: newman
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      
+      - name: Deploy the report from the gh-pages branch to the website
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GH_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: newman
       
           
